--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   <!-- CSS  -->
     <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
-    <script src="https://use.fontawesome.com/c642c695a4.js"></script>
   <link href="theme/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="theme/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
     
 <body> 
+    <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
 <header>
 <div class="navbar-fixed">
   <nav role="navigation">
