--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
     
 <body> 
-    <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
+    <link href="/theme/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <header>
 <div class="navbar-fixed">
   <nav role="navigation">
