--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         
     });
     </script>
-  <script src="http://maps.google.com/maps/api/js"></script>
+  <script src="https://maps.google.com/maps/api/js"></script>
    
   <script src="/theme/js/gmaps.js"></script>
     <script>
