--- a/index.html
+++ b/index.html
@@ -418,8 +418,7 @@
         
     });
     </script>
-  <script src="https://maps.google.com/maps/api/js"></script>
-   
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyBfZqYrisW1jKJl9sO1svCgSWg2Ewi050I"></script>
   <script src="/theme/js/gmaps.js"></script>
     <script>
     var map = new GMaps({
