--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     
   
-    <div class="section" id="more">
+    <div class="section scrollspy" id="more">
     <div class="container">
 
 
