--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">Welfare</span>
-              <p>Sam & Sian</p>
+              <p>Sian & Sam</p>
             </div>
             <div class="card-action center">
             <a class="pink-text" href="mailto:welfare@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
@@ -282,7 +282,7 @@
               <p>Jamie Wells</p>
             </div>
             <div class="card-action center">
-            <a class="pink-text" href="mailto:entz@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
+            <a class="pink-text" href="mailto:academic@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
             </div>
           </div>
         </div>
