--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <br>
                 <h5 class="white-text">Contact us</h5>
                 <br>
-                <form name="contact" action="https://formspree.io/it@osler.co.uk" method="POST">
+                <form name="contact" action="thank-you" netlify>
                     <div class="input-field">
                       <i class="fa fa-user-o prefix white-text" aria-hidden="true"></i>
                       <input name="name" type="text" class="validate white-text">
