--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">Development</span>
-              <p>George Gillett</p>
+              <p>George Sismey</p>
             </div>
             <div class="card-action center">
             <a class="pink-text" href="mailto:development@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
