--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
         <div class="col s8 offset-s2 m3">
             <div class="card white">
                  <div class="card-image">
-              <img src="/images/committee/president.png">
+              <img src="/images/committee/president.jpg">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">President</span>
-              <p>Becca Oram</p>
+              <p>Nicholas Turner</p>
             </div>
             <div class="card-action center">
             <a class="pink-text" href="mailto:president@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
@@ -160,11 +160,11 @@
         <div class="col s8 offset-s2 m3">
             <div class="card white">
                 <div class="card-image">
-              <img src="/images/committee/vp.png">
+              <img src="/images/committee/vp.jpg">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">VP</span>
-              <p>Joe Price</p>
+              <p>Daniel Murphy</p>
             </div>
             <div class="card-action center">
             <a class="pink-text" href="mailto:vicepresident@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
@@ -176,11 +176,11 @@
         <div class="col s8 offset-s2 m3">
             <div class="card white">
                 <div class="card-image">
-              <img src="/images/committee/treasurer.png">
+              <img src="/images/committee/treasurer.jpg">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">Treasurer</span>
-              <p>Adrian Wells</p>
+              <p>Darryl Braier-Lorimer</p>
             </div>
             <div class="card-action center">
             <a class="pink-text" href="mailto:treasurer@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
@@ -255,11 +255,11 @@
             <div class="col s8 offset-s2 m3">
             <div class="card white">
                 <div class="card-image">
-              <img src="/images/committee/development.png">
+              <img src="/images/committee/development.jpg">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">Development</span>
-              <p>George Sismey</p>
+              <p>Sophie Tillman</p>
             </div>
             <div class="card-action center">
             <a class="pink-text" href="mailto:development@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
@@ -275,11 +275,11 @@
         <div class="col s8 offset-s2 m3 offset-m1">
             <div class="card white">
                 <div class="card-image">
-              <img src="/images/committee/academic.png">
+              <img src="/images/committee/academic.jpg">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">Academic</span>
-              <p>Jamie Wells</p>
+              <p>Benjamin Ng</p>
             </div>
             <div class="card-action center">
             <a class="pink-text" href="mailto:academic@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
@@ -305,11 +305,11 @@
         <div class="col s8 offset-s2 m3">
             <div class="card white">
                 <div class="card-image">
-              <img src="/images/committee/it.png">
+              <img src="/images/committee/it.jpg">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">IT</span>
-              <p>Sam Kleeman</p>
+              <p>Chenduraan Kailayapillai</p>
             </div>
             <div class="card-action center">
             <a class="pink-text" href="mailto:it@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
