--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </div>
         </div>
             
-		    <div class="col s8 offset-s2 m3 offset-m1">
+		    <div class="col s8 offset-s2 m3">
             <div class="card white">
                 <div class="card-image">
               <img src="/images/committee/academic.jpg">
