--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 		       <div class="col s8 offset-s2 m3">
             <div class="card white">
                 <div class="card-image">
-              <img src="/images/committee/welfare1.jpg">
+              <img src="/images/committee/welfare2.png">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">Welfare</span>
@@ -244,7 +244,7 @@
         <div class="col s8 offset-s2 m3">
             <div class="card white">
                 <div class="card-image">
-              <img src="/images/committee/henderson.jpg">
+              <img src="/images/committee/bar2.png">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">Bar</span>
@@ -276,7 +276,7 @@
 		            <div class="col s8 offset-s2 m3">
             <div class="card white">
                 <div class="card-image">
-              <img src="/images/committee/henderson.jpg">
+              <img src="/images/committee/bar1.png">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">Bar</span>
@@ -292,7 +292,7 @@
         <div class="col s8 offset-s2 m3">
             <div class="card white">
                 <div class="card-image">
-              <img src="/images/committee/ss2.jpg">
+              <img src="/images/committee/ss1.png">
                 </div>
             <div class="card-content black-text center">
               <span class="card-title">Sports & Socs</span>
