--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               <img src="/images/committee/entz1.jpg">
                 </div>
             <div class="card-content black-text center">
-              <span class="card-title">Entz1</span>
+              <span class="card-title">Entz</span>
               <p>Katherine Laffan</p>
             </div>
             <div class="card-action center">
@@ -376,7 +376,7 @@
               <img src="/images/committee/entz2.jpg">
                 </div>
             <div class="card-content black-text center">
-              <span class="card-title">Ents</span>
+              <span class="card-title">Entz</span>
               <p>Hannah Gerretsen</p>
             </div>
             <div class="card-action center">
@@ -391,7 +391,7 @@
               <img src="/images/committee/entz3.jpg">
                 </div>
             <div class="card-content black-text center">
-              <span class="card-title">Ents</span>
+              <span class="card-title">Entz</span>
               <p>Furquaan Kaji</p>
             </div>
             <div class="card-action center">
