--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="navbar-fixed">
   <nav role="navigation">
     <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo"><img class="img-logo-vertical" id="logo" src="images/logowhite.png"/></a>
+        <a id="logo-container" href="#" class="brand-logo"><img class="img-logo-vertical" id="logo" src="images/logo.png"/></a>
         <a href="#" data-activates="slide-out" class="button-collapse"><i class="fa fa-bars" aria-hidden="true"></i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#wiki">Wiki</a></li>
