--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h5 class="header light white-text">The home of clinical students in Oxford.</h5>
       </div>
       <div class="row center">
-        <a href="#more" id="download-button" class="btn-large waves-effect waves-light pink white-text z-depth-4">Learn more</a>
+        <a href="#more" id="download-button" class="btn-large waves-effect waves-dark red white-text z-depth-4">Learn more</a>
       </div>
       <br><br><br><br><br><br>
           </div>
@@ -76,7 +76,7 @@
             <h2 class="center pink-text"><i class="fa fa-hospital-o"></i></h2>
             <h4 class="center">What?</h4>
 
-            <p class="flow-text">Osler House (named after Sir William Osler) is a JCR exclusively for clinical medical students.</p>
+            <p class="flow-text">Osler House (named after Sir William Osler) is a clubhouse and common-room exclusively for clinical medical students.</p>
           </div>
         </div>
 
