--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h5 class="header light white-text">The home of clinical students in Oxford.</h5>
       </div>
       <div class="row center">
-        <a href="#more" id="download-button" class="btn-large waves-effect waves-dark red white-text z-depth-4">Learn more</a>
+        <a href="#more" id="download-button" class="btn-large waves-effect waves-red white-text z-depth-4">Learn more</a>
       </div>
       <br><br><br><br><br><br>
           </div>
