--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           </div>
         </div>
 		    
-		      <div class="row">
+		      <div class="row center">
                 
         <div class="col s8 offset-s2 m3">
             <div class="card white">
@@ -412,7 +412,7 @@
               <p>Chenduraan Kailayapillai</p>
             </div>
             <div class="card-action center">
-            <a class="pink-text" href="mailto:it@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
+            <a class="pink-text" href="mailto:webmaster@osler.co.uk"><i class="fa fa-envelope-o"></i></a>
             </div>
           </div>
         </div>
